--- a/src/style.css
+++ b/src/style.css
@@ -55,11 +55,11 @@ body {
   top: 0;
   left: 0;
   z-index: 3;
-  background-image: url("https://images.unsplash.com/photo-1600633349333-eebb43d01e23?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1800&q=80");
-  background-repeat: repeat;
+  background-image: url("https://images.unsplash.com/photo-1600633349333-eebb43d01e23?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1");
+  background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: 0 0;
-  background-size: auto;
+  background-size: 100%;
   opacity: 0.45;
   background-color: #140909;
 }
