--- a/src/style.css
+++ b/src/style.css
@@ -92,3 +92,31 @@ footer a {
 a:hover {
   color: rgb(192, 150, 33) !important;
 }
+
+.countriesGrid {
+  display: flex;
+  z-index: 500;
+  opacity: 1;
+  flex-wrap: wrap;
+  margin-inline: 10%;
+  gap: 15px;
+}
+
+.countriesGrid > * {
+  flex: 1 1 3em;
+}
+
+.country {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+
+.country .flag {
+  max-width: 100px;
+}
+
+.flag img {
+  width: 100%;
+  height: auto;
+}
