Add search input

--- a/src/style.css
+++ b/src/style.css
@@ -195,3 +195,12 @@ a:hover {
   color: white !important;
   transform: scale(1.02);
 }
+
+.nextBtn,
+.previousBtn {
+  cursor: pointer;
+}
+
+.nextBtn.disabled, .previousBtn.nextBtn.disabled {
+  cursor: not-allowed;
+}
