--- a/src/style.css
+++ b/src/style.css
@@ -174,6 +174,10 @@ a:hover {
   transform: scale(1.1);
 }
 
+.nameAndLikes .fas.fa-heart {
+  color: red;
+}
+
 .commentBtn {
   justify-self: end;
 }
