Update modal styles

--- a/src/style.css
+++ b/src/style.css
@@ -315,3 +315,22 @@ a:hover {
 #countriesDetailsModal {
   z-index: 30000;
 }
+
+.comment-username {
+  color: var(--primary-color-2);
+  max-width: 70px;
+  overflow-wrap: break-word; 
+  text-align: left;
+  flex: 1;
+}
+
+.creation-date {
+  /* width: 100px; */
+  font-size: 12px;
+  padding-top: 3px;
+  /* flex: 1; */
+}
+
+.user-comment {
+  flex: 2;
+}
